Make sure banner appears over the bg image on home page on mobile

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -23,6 +23,11 @@
     background-position: top -225px center;
     background-repeat: no-repeat;
 
+    // Make bg image appear behind the alert on mobile
+    padding-top: 115px;
+    margin-top: -125px;
+    z-index: -1;
+
     h1 {
         margin: 2.5rem 0 0.5em;
         font-size: 1.75rem;
@@ -82,6 +87,7 @@
         min-height: calc(100vh - 50px);
         background-size: cover;
         padding-top: 110px;
+        margin-top: 0;
 
         h1, .body {
             text-align: center;
